--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         .text-custom-purple:hover,
         .text-custom-purple:focus,
         .text-custom-purple:active {
-            text-shadow: 0 0 5px #fff, 0 0 10px #f701ff, 0 0 15px #db34db, 0 0 20px #db34db;
+            text-shadow: 0 0 5px #ffffff, 0 0 10px #f701ff, 0 0 15px #db34db, 0 0 20px #db34db;
         }
 
         /* PORTOFOLIO STYLES - UPDATED */
@@ -654,7 +654,7 @@
             </div>
         </section>
 
-        <!-- Portofolio Section - UPDATED -->
+        <!-- Portofolio Section -->
         <section id="portofolio">
             <div class="container">
                 <div class="section-header text-center reveal fade-bottom"
@@ -671,7 +671,7 @@
                     <button class="btn btn-primary mx-1 my-1" @click="filterPortofolio('app')"
                         :class="{'active': portofolioFilter === 'app'}">Dashboard development</button>
                     <button class="btn btn-primary mx-1 my-1" @click="filterPortofolio('graphic')"
-                        :class="{'active': portofolioFilter === 'graphic'}">Graphic Design</button>
+                        :class="{'active': portofolioFilter === 'graphic'}">Design</button>
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-lg-4 reveal"
@@ -888,8 +888,8 @@
                     portofolioItems: [
                         { title: 'E-commerce Website', category: 'web', image: 'assets/img/la-ferme responsive.png', link: 'https://la-ferme-mart.glitch.me' },
                         { title: 'Mobile App UI', category: 'app', image: 'assets/img/project2.jpg', link: '#' },
-                        { title: 'Dashboard Design', category: 'web', image: 'assets/img/project3.jpg', link: '#' },
-                        { title: 'Brand Identity', category: 'graphic', image: 'assets/img/project4.jpg', link: '#' },
+                        { title: 'Web develop', category: 'web', image: 'assets/img/paw.jpg', link: 'https://www.figma.com/design/soVqNcZeMhZvDMkhLS2HoD/Untitled?node-id=1-3&m=dev' },
+                        { title: 'Web Design Prototype', category: 'graphic', image: 'assets/img/paw club edit.jpg', link: '#' },
                         { title: 'Social Media App', category: 'app', image: 'assets/img/project5.jpg', link: '#' },
                         { title: 'Portfolio Website', category: 'web', image: 'assets/img/project6.jpg', link: '#' }
                     ],
