--- a/index.html
+++ b/index.html
@@ -160,22 +160,22 @@
 
         /* PORTOFOLIO STYLES - UPDATED */
         .portofolio-item {
-            margin-bottom: 30px;
+            margin-bottom: 0px;
             overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 5px 15px rgb(223, 102, 247);
             transition: all 0.3s ease;
             height: 100%;
         }
 
         .portofolio-item:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 20px 25px rgb(151, 28, 175);
         }
 
         .portofolio-image-container {
             position: relative;
             overflow: hidden;
-            aspect-ratio: 10/9;
+            aspect-ratio: 8/8;
             background-color: #f5f5f5;
         }
 
@@ -669,12 +669,12 @@
                     <button class="btn btn-primary mx-1 my-1" @click="filterPortofolio('web')"
                         :class="{'active': portofolioFilter === 'web'}">Web Development</button>
                     <button class="btn btn-primary mx-1 my-1" @click="filterPortofolio('app')"
-                        :class="{'active': portofolioFilter === 'app'}">Dashboard development</button>
+                        :class="{'active': portofolioFilter === 'app'}">Data Visualization</button>
                     <button class="btn btn-primary mx-1 my-1" @click="filterPortofolio('graphic')"
                         :class="{'active': portofolioFilter === 'graphic'}">Design</button>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 col-lg-4 reveal"
+                    <div class="col-md-6 col-lg-4 mb-4 reveal"
                         :class="{'fade-left': index % 2 === 0, 'fade-right': index % 2 !== 0, active: activeSection === 'portofolio'}"
                         v-for="(item, index) in filteredPortofolio" :key="index">
                         <div class="portofolio-item">
@@ -886,11 +886,10 @@
                         }
                     ],
                     portofolioItems: [
-                        { title: 'E-commerce Website', category: 'web', image: 'assets/img/la-ferme responsive.png', link: 'https://la-ferme-mart.glitch.me' },
-                        { title: 'Mobile App UI', category: 'app', image: 'assets/img/project2.jpg', link: '#' },
-                        { title: 'Web develop', category: 'web', image: 'assets/img/paw.jpg', link: 'https://www.figma.com/design/soVqNcZeMhZvDMkhLS2HoD/Untitled?node-id=1-3&m=dev' },
-                        { title: 'Web Design Prototype', category: 'graphic', image: 'assets/img/paw club edit.jpg', link: '#' },
-                        { title: 'Social Media App', category: 'app', image: 'assets/img/project5.jpg', link: '#' },
+                        { title: 'E-commerce Website', category: 'web', image: 'assets/img/la-ferme web.png', link: 'https://la-ferme-mart.glitch.me' },
+                        { title: 'Exploratory Data Analysis', category: 'app', image: 'assets/img/persentase kelulusan.png', link: 'https://github.com/anisahalfianap/Graduation-analysis-visualization-data.git' },
+                        { title: 'Web develop', category: 'web', image: 'assets/img/paw.jpg', link: '' },
+                        { title: 'Web Design Prototype', category: 'graphic', image: 'assets/img/paw club edit.jpg', link: 'https://www.figma.com/design/soVqNcZeMhZvDMkhLS2HoD/Untitled?node-id=1-3&m=dev' },
                         { title: 'Portfolio Website', category: 'web', image: 'assets/img/project6.jpg', link: '#' }
                     ],
                     experience: [
