--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
                     portofolioItems: [
                         { title: 'E-commerce Website', category: 'web', image: 'assets/img/la-ferme web.png', link: 'https://la-ferme-mart.glitch.me' },
                         { title: 'Exploratory Data Analysis', category: 'app', image: 'assets/img/persentase kelulusan.png', link: 'https://github.com/anisahalfianap/Graduation-analysis-visualization-data.git' },
-                        { title: 'Web develop', category: 'web', image: 'assets/img/paw.jpg', link: '' },
+                        { title: 'My Calculator', category: 'web', image: 'assets/img/phone.gif', link: 'https://calculator-ku.netlify.app/' },
                         { title: 'Web Design Prototype', category: 'graphic', image: 'assets/img/paw club edit.jpg', link: 'https://www.figma.com/design/soVqNcZeMhZvDMkhLS2HoD/Untitled?node-id=1-3&m=dev' },
                         { title: 'Portfolio Website', category: 'web', image: 'assets/img/project6.jpg', link: '#' }
                     ],
